# metwork-docs

./: README.md  mkdocs.yml  publish.sh  pyproject.toml
docs/: identification.md  index.md
docs/data/: prepare.md  upload.md
docs/project/: create.md  init.md  reactions.md  results.md  run.md
docs/stylesheets/: extra.css
overrides/: main.html
