[tool.poetry]
name = "metwork-doc"
version = "0.1.0"
description = ""
authors = ["Yann Beauxis <dev@yannbeauxis.net>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pylint = "^2.7.2"
black = "^20.8b1"
mkdocs = "^1.1.2"
mkdocs-material = "^7.0.6"
markdown-include = "^0.6.0"
pymdown-extensions = "^8.1.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
